--- a/start_here.html
+++ b/start_here.html
@@ -63,7 +63,7 @@
       <li><a href="html/Experiment_3.html"> Experiment_3 </a> - Now when the hand finds a dot, it plays a note (just concept, unorganized code)</li>
       <li><a href="html/Experiment_4.html"> Experiment_4 </a> - Same as above but with three layers (just concept, VERY unorganized code)</li>
       <li><a href="html/Experiment_5.html"> Experiment_5 </a> - Same as above but with super simple sounds (VERY VERY unorganized code)</li>
-      <li><a href="html/Experiment_6.html"> Experiment_6 </a> - [WIP] Same as above but dynamically generated (clean code)</li>
+      <li><a href="html/Experiment_6.html"> Experiment_6 </a> - [WIP] Same as above but dynamically generated (clean code) Still not done yet, some modifications to make AND BETTER DIVIDE M, V, C which as of now are still a bit mushed</li>
     </ul>
 
     <h3><br>---------------------------------------------------------------------------------------------------------------------</h3>
