--- a/microphone/FFTandAnalysis/index.html
+++ b/microphone/FFTandAnalysis/index.html
@@ -9,5 +9,6 @@
     <canvas id="canvas"></canvas>
     <script src="mic-osc.js"></script>
     <div id="arrayIndex"></div>
+    <div id="arrayIndex"></div>
 </body>
 </html>
