Trasferito tutte le funzioni build dentro le classi

--- a/html/Experiment_6.html
+++ b/html/Experiment_6.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="../js/Experiment_6/Default.js"></script>
     <script src="../js/Experiment_6/GridOfDots.js"></script>
     <script src="../js/Experiment_6/Clock.js"></script>
     <script src="../js/Experiment_6/View.js"></script>
