Working arbitrary angle dot placement

--- a/html/Experiment_6.html
+++ b/html/Experiment_6.html
@@ -21,7 +21,7 @@
       <br><input type = "number" id = "layer" value = "0"> Layer to modify
       <br><input type = "number" id = "eqN" value="0"><button id = "renderEqN">Apply</button> <= number of  equally spaced dots
       <br> OR
-      <br><input type="text" id="deg"> <button id = "renderDeg">Apply</button> <= comma separated positions (in degrees, starting from zero on the top, clockwise)
+      <br><input type="text" id="deg"> <button id = "renderDeg">Apply</button> <= comma separated positions (in degrees, starting from zero on the top, clockwise. The angle must be exact.)
       <br><button id="play">Play</button><button id="pause">Pause</button><button id="stop">Stop</button>
     </div>
 
