--- a/microphone/index.html
+++ b/microphone/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <canvas id="current-scope" width=500 height=260 style="
-            background-color: beige;
+            background-color: #f5f5dc;
             border: 3px solid;">
             </canvas>
 
@@ -18,12 +18,13 @@
             border: 3px solid;">
             </canvas>
 
+    <div id="waveform"></div>
+
     <button id="start-rec">START</button>
     <button id="stop-rec">STOP</button>
     <button id="resume">RESUME</button>
     <p id="millsec"></p>
     <p id="seconds"></p>
-
 
     <script src="microphone.js"></script>
     <script src="fetch.js"></script>
