--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+</head>
+
 <body>
     <h1>PROGETTO CMRM/ACTAM</h1>
     <br><h3>IDEE</h3>
