--- a/microphone/index.html
+++ b/microphone/index.html
@@ -18,10 +18,9 @@
             border: 3px solid;">
             </canvas>
 
-    <div id="waveform"></div>
-
     <button id="start-rec">START</button>
     <button id="stop-rec">STOP</button>
+    <button id="play-back">PLAYBACK</button>
     <button id="resume">RESUME</button>
     <p id="millsec"></p>
     <p id="seconds"></p>
