--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       <li><a href = "https://docs.google.com/spreadsheets/d/1Ri0I-3cU5kT8QD9Bn3o1HeU1ErAR0qi4LFqq6CtcLFs/edit?pli=1#gid=0">Gruppi</a></li>
       <li><a href = "https://app.diagrams.net/#G1lPreFppSU-1ZKCvl6xZs1IkHMg57zbwr">Drawio - diagrammi</a></li>
       <li><a href = "https://github.com/magiwanders/magiwanders.com/tree/master/learning/BeatBox_Machine"> Github</a></li>
+      <li><a href = "https://www.youtube.com/watch?v=q-lUgFxwjEM&t=261s"> TIZIO SALVA VITA</a></li>
+      <li><a href = "https://www.youtube.com/watch?v=tc8DU14qX6I">FUNZIONE GET</a></li>
+      
     </ul>
 
     <h3><br>---------------------------------------------------------------------------------------------------------------------</h3>
