--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       <li><a href = "https://github.com/magiwanders/magiwanders.com/tree/master/learning/BeatBox_Machine"> Github</a></li>
       <li><a href = "https://www.youtube.com/watch?v=q-lUgFxwjEM&t=261s"> TIZIO SALVA VITA</a></li>
       <li><a href = "https://www.youtube.com/watch?v=tc8DU14qX6I">FUNZIONE GET</a></li>
-      
+      <li><a href='https://stackoverflow.com/questions/41429172/python-basehttprequesthandler-respond-with-json'> Json handling </a>
+
     </ul>
 
     <h3><br>---------------------------------------------------------------------------------------------------------------------</h3>
