mic update and addclass resolve

--- a/main/index.html
+++ b/main/index.html
@@ -75,10 +75,9 @@
     <script src="Default.js"></script>
     <script src="GridOfDots.js"></script>
     <script src="Clock.js"></script>
-    <script src="AddClock.js"></script>
+    <script src="Addbutton.js"></script>
     <script src="WaitRec.js"></script>
 
-    <script src="AddSection.js"></script>
     <script src="Section.js"></script>
     <script src="View.js"></script>
     <script src="Controller.js"></script>
