impl bpm sia client che server

--- a/main/index.html
+++ b/main/index.html
@@ -32,7 +32,13 @@
                 <div id="millsec"></div>
             </div>
 
-            <div id="tempo-info"></div>
+            <div class="tempo-info">
+                <span id="next"></span>
+                <span id="prev"></span>
+                <div id="box">
+                    <span id="bpm-value"></span>
+                </div>
+            </div>
 
         </div>
 
@@ -77,6 +83,7 @@
     <script src="Clock.js"></script>
     <script src="Addbutton.js"></script>
     <script src="WaitRec.js"></script>
+    <script src="bpm.js"></script>
 
     <script src="Section.js"></script>
     <script src="View.js"></script>
