--- a/main/index.html
+++ b/main/index.html
@@ -44,6 +44,8 @@
 
         <div id="rythmyc-view">
         </div>
+        <p id = 'sectionIndex'></p>
+        <p id = 'clockIndex'></p>
 
 
     </div>
