--- a/main/index.html
+++ b/main/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+    <link rel="icon" href="data:,">
     <link href="style-page.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,8 +44,8 @@
 
         <div id="rythmyc-view">
         </div>
-        <p id = 'sectionIndex'></p>
-        <p id = 'clockIndex'></p>
+        <p id='sectionIndex'></p>
+        <p id='clockIndex'></p>
 
 
     </div>
