--- a/main/index.html
+++ b/main/index.html
@@ -75,7 +75,7 @@
     </div>
 
 -->
-    <script src="Model.js"></script>
+
     <script src="microphone.js"></script>
     <script src="fetch.js"></script>
     <script src="timer.js"></script>
@@ -88,9 +88,10 @@
     <script src="bpm.js"></script>
 
     <script src="Section.js"></script>
-    <script src="View.js"></script>
-    <script src="Controller.js"></script>
 
+    <script src="MVC/Model.js"></script>
+    <script src="MVC/View.js"></script>
+    <script src="MVC/Controller.js"></script>
 
     <script src="main-script.js"></script>
 
