--- a/main/index.html
+++ b/main/index.html
@@ -76,24 +76,26 @@
 
 -->
 
-    <script src="microphone.js"></script>
-    <script src="fetch.js"></script>
-    <script src="timer.js"></script>
-    <script src="Sound.js"></script>
-    <script src="Default.js"></script>
-    <script src="GridOfDots.js"></script>
-    <script src="Clock.js"></script>
-    <script src="Addbutton.js"></script>
-    <script src="WaitRec.js"></script>
-    <script src="bpm.js"></script>
+    <script src="Server/Fetch.js"></script>
 
-    <script src="Section.js"></script>
+    <script src="Components/Microphone.js"></script>
+    <script src="Components/Timer.js"></script>
+    <script src="Components/Addbutton.js"></script>
+    <script src="Components/WaitRec.js"></script>
+    <script src="Components/Section.js"></script>
+
+    <script src="Sound/Sound.js"></script>
+
+    <script src="Clock/Bpm.js"></script>
+    <script src="Clock/Default.js"></script>
+    <script src="Clock/GridOfDots.js"></script>
+    <script src="Clock/Clock.js"></script>
 
     <script src="MVC/Model.js"></script>
     <script src="MVC/View.js"></script>
     <script src="MVC/Controller.js"></script>
 
-    <script src="main-script.js"></script>
+    <!--<script src="main-script.js"></script>-->
 
 </body>
 
