--- a/main/index.html
+++ b/main/index.html
@@ -15,9 +15,21 @@
 
         <div id="controllers">
 
-            <div id="play"></div>
-            <div id="stop"></div>
-            <div id="loop"></div>
+            <div id="play">
+                <img id="play-img" src="Components/play-button.png"></img>
+            </div>
+
+            <div id="stop">
+                <img id="stop-img" src="Components/stop.png"></img>
+            </div>
+
+            <div id="create-clock">
+                <img id="create-clock-img" src="Components/timelapse.png"></img>
+            </div>
+
+            <div id="resume-ctx">
+                <img id="resume-ctx-img" src="Components/power-button.png"></img>
+            </div>
 
             <div id="selectorContainer">
                 <div id="selector"></div>
