Masterwheel e piccolo fix armeddot

--- a/main/index.html
+++ b/main/index.html
@@ -17,7 +17,14 @@
           <div id="controllers">
 
               <div id="selectorContainer">
-                  <div id="selector"></div>
+                  <div id="selector">
+                    <div style="top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    position: absolute;">
+                      SectionWheel Coming Soon 
+                    </div>
+                  </div>
               </div>
 
               <div id="canvasCont">
