Working interpolation at 25

--- a/main/index.html
+++ b/main/index.html
@@ -68,8 +68,8 @@
             <div id="rythmyc-view">
             </div>
         </div>
-        <p id='sectionIndex'></p>
-        <p id='clockIndex'></p>
+        <p id='sectionIndex' style='visibility: hidden;'></p>
+        <p id='clockIndex' style='visibility: hidden;'></p>
 
 
     </div>
